# backend

./: .dockerignore  .editorconfig  .env.dev  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.migrations  Dockerfile.prod  Dockerfile.staging  Makefile  README.md  diesel.toml  endpoints.md  imports.md  openapi.yaml  other.sql  pyproject.toml  rustc-ice-2025-03-06T16_58_12-163072.txt  rustc-ice-2025-03-06T16_58_12-163073.txt  rustc-ice-2025-03-06T16_58_42-163275.txt  rustc-ice-2025-03-06T16_58_42-163276.txt  rustc-ice-2025-03-06T16_58_58-163870.txt  rustc-ice-2025-03-06T16_58_58-163871.txt  rustc-ice-2025-03-07T11_47_59-892004.txt  rustc-ice-2025-03-07T11_48_19-893051.txt  rustc-ice-2025-03-07T11_48_20-893223.txt  rustc-ice-2025-03-07T16_11_34-1139320.txt  rustc-ice-2025-03-07T17_02_27-1270670.txt  rustfmt.toml  search.sql  tests.http
.github/: Dockerfile  Dockerfile.lint  compose.yaml  lint.sh  release-drafter.yaml  test.sh
.github/workflows/: cd-prod.yaml  cd-staging.yaml  cd.yaml  ci.yaml  label.yaml  lint-and-test.yaml  release.yaml
app/: constants.py  database.py  dependencies.py  exceptions.py  main.py  model.py  security.py
app/dependencies/: auth.py  database.py
app/models/: location.py  translation.py  user.py
app/routers/: auth.py  translation.py  user.py
app/schemas/: __init__.py  translation.py  user.py
app/services/: auth.py  translation.py  user.py
blokmap/: Cargo.toml
blokmap/migrations/2025-06-02-145245_initial_setup/: down.sql
blokmap/src/: lib.rs  mailer.rs  main.rs
blokmap/src/controllers/: location.rs  mod.rs
blokmap/src/controllers/auth/: mod.rs  sso.rs
blokmap/src/middleware/: admin.rs  auth.rs
blokmap/src/models/: image.rs  mod.rs  opening_time.rs  profile.rs
blokmap/src/models/ephemeral/: mod.rs
blokmap/src/models/location/: filter.rs
blokmap/src/schemas/: authority.rs  image.rs  location.rs  opening_time.rs  profile.rs  translation.rs
blokmap/tests/: location.rs  profile.rs  translation.rs
blokmap/tests/common/: mock_db.rs
blokmap/tests/seed/: locations.json
common/: Cargo.toml
common/src/: error.rs
libs/common/: Cargo.toml
libs/db/: Cargo.toml
libs/models/: Cargo.toml
libs/models/authority/: Cargo.toml
libs/models/authority/src/: lib.rs  member.rs  role.rs
libs/models/base/: Cargo.toml
libs/models/base/src/: lib.rs
libs/models/common/: Cargo.toml
libs/models/common/src/: lib.rs
libs/models/image/: Cargo.toml
libs/models/image/src/: lib.rs
libs/models/institution/: Cargo.toml
libs/models/institution/src/: lib.rs  member.rs  role.rs
libs/models/location/: Cargo.toml
libs/models/location/src/: filter.rs  lib.rs  member.rs  role.rs
libs/models/opening_time/: Cargo.toml
libs/models/opening_time/src/: lib.rs
libs/models/permissions/: Cargo.toml
libs/models/permissions/src/: authority.rs  institution.rs  lib.rs  location.rs
libs/models/profile/: Cargo.toml
libs/models/profile/src/: lib.rs
libs/models/reservation/: Cargo.toml
libs/models/reservation/src/: lib.rs
libs/models/review/: Cargo.toml
libs/models/review/src/: lib.rs
libs/models/role/: Cargo.toml
libs/models/role/src/: authority.rs  institution.rs  lib.rs  location.rs
libs/models/src/: image.rs  institution.rs  lib.rs  opening_time.rs  profile.rs  reservation.rs  review.rs  tag.rs  translation.rs
libs/models/src/authority/: member.rs  mod.rs
libs/models/src/db/: alias.rs  schema.rs
libs/models/src/institution/: member.rs  mod.rs
libs/models/src/location/: filter.rs  member.rs  mod.rs
libs/models/tag/: Cargo.toml
libs/models/tag/src/: lib.rs
libs/models/translation/: Cargo.toml
libs/models/translation/src/: lib.rs
libs/primitives/: Cargo.toml
libs/utils/: Cargo.toml
libs/utils/src/: image.rs
migrations/: env.py  script.py.mako
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2025-03-01-235334_create_profile/: down.sql  up.sql
migrations/2025-03-02-151130_create_translation/: down.sql  up.sql
migrations/2025-03-06-172712_create_location/: down.sql  up.sql
migrations/2025-06-02-145245_initial_setup/: down.sql  up.sql
migrations/2025-08-07-183246_add_status_enum_on_reservation/: down.sql  up.sql
migrations/2025-08-07-221026_add_indices_to_tables/: down.sql  up.sql
migrations/2025-08-12-170417_add_institution_category/: down.sql  up.sql
migrations/2025-08-12-215558_institution_creator_not_null/: down.sql  up.sql
migrations/2025-08-12-220744_link_authority_to_institution/: down.sql  up.sql
migrations/2025-08-12-222517_add_institution_members/: down.sql  up.sql
migrations/2025-08-18-051540_add_image_url/: down.sql  up.sql
migrations/2025-08-20-214541_remove_reservation_block_size/: down.sql  up.sql
migrations/2025-08-21-034523_add_location_image_index/: down.sql  up.sql
migrations/2025-08-23-232324_image_uploaded_nullable/: down.sql  up.sql
migrations/2025-08-26-091533_create_roles_system/: down.sql  up.sql
migrations/versions/: 2025_02_24_1625-635bd7e0bd8c_initial_migration.py  2025_02_26_1740-5886db6254e5_create_user_table.py  2025_02_28_2004-b905d8434f7a_.py  2025_02_28_2004-b905d8434f7a_create_translation_tables.py
models/: Cargo.toml  schema.rs
models/src/: image.rs  lib.rs  notification.rs  opening_time.rs  pagination.rs  profile.rs  reservation.rs  review.rs  schema.rs  tag.rs  translation.rs
multi_template/: Cargo.toml
multi_template/src/: lib.rs
multi_template_impl/: Cargo.toml
multi_template_impl/src/: lib.rs
seed/: profiles.json
seeder/: Cargo.toml
seeder/src/: main.rs  util.rs
src/: config.rs  error.rs  lib.rs  mailer.rs  main.rs  notification.rs  routes.rs  schema.rs  seeder.rs  session.rs
src/controllers/: auth.rs  authority.rs  institution.rs  location.rs  mod.rs  notifications.rs  opening_time.rs  profile.rs  reservation.rs  review.rs  tag.rs  translation.rs
test/: test_auth.py  test_example.py
tests/: auth.rs  helper.rs  location.rs  opening_time.rs  profile.rs  redis.rs  reservation.rs  rustc-ice-2025-03-07T17_04_17-1279097.txt  tag.rs  translation.rs
(+122 files in other folders)
