[profile.dev]
debug = 0
strip = "debuginfo"
panic = "abort"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
codegen-units = 1

[workspace]
members = ["seeder", "libs/*"]
resolver = "3"

[workspace.dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie", "cookie-private"] }
axum_typed_multipart = "0.16.3"
bitflags = { version = "2.9.1", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres", "tracing"] }
diesel = { version = "2.2.10", features = [
    "postgres",
    "chrono",
    "serde_json",
    "uuid",
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel-dynamic-schema = "0.2.3"
chrono = { version = "0.4.41", features = ["serde"] }
fast_image_resize = { version = "5.1.4", features = ["image", "rayon"] }
image = "0.25.6"
lettre = { version = "0.11.16", features = ["tracing"] }
openidconnect = { version = "4.0.0", features = ["reqwest-blocking"] }
rayon = "1.10.0"
redis = { version = "0.31.0", features = ["tokio-comp", "uuid"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_with = "3.13.0"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45.1", features = [
    "macros",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "signal",
    "tracing",
]}
tracing = "0.1.41"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
validator = "0.20.0"



[package]
name = "blokmap"
version = "0.4.1"
authors = [
    "Ewout Verlinde <ewout@gentsestudentenraad.be>",
    "Tibo Ulens <tibo@gentsestudentenraad.be>",
]
edition = "2024"
readme = "../README.md"
license-file = "../LICENSE"
publish = false

[dependencies]
common = { path = "./libs/common" }
models = { path = "./libs/models" }
utils = { path = "./libs/utils" }

argon2 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum_typed_multipart = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
deadpool-diesel = { workspace = true }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
diesel-dynamic-schema = { workspace = true }
fast_image_resize = { workspace = true }
image = { workspace = true }
lettre = { workspace = true }
openidconnect = { workspace = true }
rayon = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

parking_lot = "0.12.4"
regex = "1.11.1"
tower = "0.5.2"
tower-http = { version = "0.6.5", features = [
    "compression-full",
    "decompression-full",
	"set-header",
    "timeout",
    "trace",
	"cors",
]}
tracing-subscriber = "0.3.19"
validator_derive = "0.20.0"

[dev-dependencies]
axum-test = "17.3.0"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
futures = "0.3.31"
http-body-util = "0.1.2"
mime = "0.3.17"
