[package]
name = "blokmap"
version = "0.2.0"
authors = [
    "Ewout Verlinde <ewout@gentsestudentenraad.be>",
    "Tibo Ulens <tibo@gentsestudentenraad.be>",
]
edition = "2024"
readme = "README.md"
license-file = "LICENSE"
publish = false

[dependencies]
argon2 = "0.5.3"
tokio = { workspace = true }
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie", "cookie-private"] }
chrono = { version = "0.4.40", features = ["serde"] }
deadpool-diesel = { workspace = true }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
diesel-dynamic-schema = { workspace = true }
fast_image_resize = { version = "5.1.4", features = ["image", "rayon"] }
image = "0.25.6"
lettre = { version = "0.11.16", features = ["tracing"] }
openidconnect = { version = "4.0.0", features = ["reqwest-blocking"] }
parking_lot = "0.12.4"
rayon = "1.10.0"
redis = { version = "0.31.0", features = ["tokio-comp", "uuid"] }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.12"
time = "0.3.41"
tower = "0.5.2"
tower-http = { version = "0.6.5", features = [
    "compression-full",
    "decompression-full",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
validator = "0.20.0"
validator_derive = "0.20.0"

[dev-dependencies]
axum-test = "17.3.0"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
futures = "0.3.31"
http-body-util = "0.1.2"
mime = "0.3.17"
