[package]
name = "blokmap"
version = "0.2.0"
authors = [
    "Ewout Verlinde <ewout@gentsestudentenraad.be>",
    "Tibo Ulens <tibo@gentsestudentenraad.be>",
]
edition = "2024"
readme = "../README.md"
license-file = "../LICENSE"
publish = false

[dependencies]
common = { path = "../common" }
models = { path = "../models" }

argon2 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
deadpool-diesel = { workspace = true }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
diesel-dynamic-schema = { workspace = true }
fast_image_resize = { workspace = true }
image = { workspace = true }
lettre = { workspace = true }
rayon = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

openidconnect = { version = "4.0.0", features = ["reqwest-blocking"] }
parking_lot = "0.12.4"
regex = "1.11.1"
serde_json = "1.0.139"
tower = "0.5.2"
tower-http = { version = "0.6.5", features = [
    "compression-full",
    "decompression-full",
    "timeout",
    "trace",
]}
tracing-subscriber = "0.3.19"
validator_derive = "0.20.0"

[dev-dependencies]
axum-test = "17.3.0"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
futures = "0.3.31"
http-body-util = "0.1.2"
mime = "0.3.17"
