[package]
name = "models"
version = "0.1.0"
authors = [
    "Ewout Verlinde <ewout@gentsestudentenraad.be>",
    "Tibo Ulens <tibo@gentsestudentenraad.be>",
]
edition = "2024"
readme = "../README.md"
license-file = "../LICENSE"
publish = false

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
primitive_authority = { path = "../primitives/authority" }
primitive_image = { path = "../primitives/image" }
primitive_institution = { path = "../primitives/institution" }
primitive_location = { path = "../primitives/location" }
primitive_opening_time = { path = "../primitives/opening_time" }
primitive_profile = { path = "../primitives/profile" }
primitive_reservation = { path = "../primitives/reservation" }
primitive_review = { path = "../primitives/review" }
primitive_tag = { path = "../primitives/tag" }
primitive_translation = { path = "../primitives/translation" }

argon2 = { workspace = true }
axum-extra = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
deadpool-diesel = { workspace = true }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
diesel-dynamic-schema = { workspace = true }
lettre = { workspace = true }
openidconnect = { workspace = true }
rayon = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

rand = "0.9.2"
