[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
models = { path = "../models" }
primitive_image = { path = "../primitives/image" }

axum = { workspace = true }
fast_image_resize = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
uuid = { workspace = true }
