[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

primitives = { path = "../primitives" }

image = { path = "../models/image" }
location = { path = "../models/location" }
profile = { path = "../models/profile" }

axum = { workspace = true }
fast_image_resize = { workspace = true }
image_processing = { workspace = true }
uuid = { workspace = true }
