[package]
name = "authority"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
db = { path = "../../db" }
models_common = { path = "../common" }

primitive_authority = { path = "../../primitives/authority" }
primitive_image = { path = "../../primitives/image" }
primitive_institution = { path = "../../primitives/institution" }
primitive_profile = { path = "../../primitives/profile" }

bitflags = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
