[package]
name = "authority"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
db = { path = "../../db" }

primitives = { path = "../../primitives" }

profile = { path = "../profile" }

chrono = { workspace = true }
diesel = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
