[package]
name = "authority"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
db = { path = "../../db" }

primitives = { path = "../../primitives" }

permissions = { path = "../permissions" }
profile = { path = "../profile" }
role = { path = "../role" }

diesel = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
