[package]
name = "location"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
db = { path = "../../db" }
models_common = { path = "../common" }

primitive_authority = { path = "../../primitives/authority" }
primitive_image = { path = "../../primitives/image" }
primitive_location = { path = "../../primitives/location" }
primitive_profile = { path = "../../primitives/profile" }
primitive_translation = { path = "../../primitives/translation" }

authority = { path = "../authority" }
image = { path = "../image" }
opening_time = { path = "../opening_time" }
tag = { path = "../tag" }
translation = { path = "../translation" }

bitflags = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-dynamic-schema = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
