[package]
name = "review"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
db = { path = "../../db" }
models_common = { path = "../common" }

primitive_location = { path = "../../primitives/location" }
primitive_profile = { path = "../../primitives/profile" }
primitive_review = { path = "../../primitives/review" }

diesel = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
