[package]
name = "role"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
db = { path = "../../db" }
base = { path = "../base" }

primitives = { path = "../../primitives" }

chrono = { workspace = true }
diesel = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
