[package]
name = "tag"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
db = { path = "../../db" }
models_common = { path = "../common" }

primitive_profile = { path = "../../primitives/profile" }
primitive_tag = { path = "../../primitives/tag" }
primitive_translation = { path = "../../primitives/translation" }

translation = { path = "../translation" }

chrono = { workspace = true }
diesel = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
